fix readme image overflow

--- a/src/public/less/components/package-header.less
+++ b/src/public/less/components/package-header.less
@@ -81,9 +81,6 @@
 	}
 
 	.keywords-mobile {
-		.keywords-header {
-		}
-
 		.keywords-badges {
 			display: flex;
 			gap: 8px;
@@ -372,9 +369,8 @@
 
 			.overlay {
 				@media (min-width: @screen-sm-min) {
-                                  display: none;
-                                }
-
+					display: none;
+				}
 				position: fixed;
 				top: 0;
 				bottom: 0;
@@ -389,7 +385,7 @@
 				color: #5c667a;
 				padding: 24px;
 				box-shadow: 0 4px 2px -2px rgba(23, 35, 59, .06), 0 2px 8px rgba(23, 35, 59, .04);
-				background-color: white;
+				background-color: #fff;
 				border-radius: 8px 8px 0 0;
 				margin-left: 0;
 				display: flex;
@@ -479,7 +475,7 @@
 						padding: 10px 8px 10px 16px;
 						border: 1px solid #cfd6dd;
 						color: #17233b;
-						background-color: white;
+						background-color: #fff;
 						display: flex;
 						align-items: center;
 						justify-content: space-between;
