--- a/src/public/less/components/package.less
+++ b/src/public/less/components/package.less
@@ -68,56 +68,59 @@
 					border-radius: 6px;
 					position: relative;
 					margin-bottom: 0;
+					margin-top: 12px;
+					width: 100%;
 
-                                        margin-top: 12px;
-                                        width: 100%;
-			@media (min-width: @screen-sm-min) {
-                                        margin-top: 0;
-					width: 184px;
-                                      }
+					@media (min-width: @screen-sm-min) {
+						margin-top: 0;
+						width: 184px;
+					}
 
 					>span:nth-child(1),
 					>span:nth-child(2) {
-                                          display: inline-block;
-                                          text-align: center;
-                                          width: 50%;
-                                          top: 0;
-                                          transform: translateY(50%);
-                                          user-select: none;
-                                          position: absolute;
-                                          background: transparent;
-                                          z-index: 2;
-                                          @media (min-width: @screen-sm-min) {
-                                            display: inline;
-                                            text-align: left;
-                                            transform: none;
-                                            width: auto;
-                                            top: 10px;
-                                          }
-                                        }
+						display: inline-block;
+						text-align: center;
+						width: 50%;
+						top: 0;
+						transform: translateY(50%);
+						user-select: none;
+						position: absolute;
+						background: transparent;
+						z-index: 2;
+
+						@media (min-width: @screen-sm-min) {
+							display: inline;
+							text-align: left;
+							transform: none;
+							width: auto;
+							top: 10px;
+						}
+					}
 
 					>span:nth-child(1) {
 						color: #111a2c;
-                                                left: 0;
-                                          @media (min-width: @screen-sm-min) {
-						left: 16.5px;
-                                          }
+						left: 0;
+
+						@media (min-width: @screen-sm-min) {
+							left: 16.5px;
+						}
 					}
 
 					>span:nth-child(2) {
-                                                right: 0;
-                                          @media (min-width: @screen-sm-min) {
-						right: 37.5px;
-                                          }
+						right: 0;
+
+						@media (min-width: @screen-sm-min) {
+							right: 37.5px;
+						}
 					}
 
 					&:before {
 						display: flex;
-
 						width: 50%;
-                                          @media (min-width: @screen-sm-min) {
-						width: 88px;
-                                              }
+
+						@media (min-width: @screen-sm-min) {
+							width: 88px;
+						}
 						height: 32px;
 						content: "";
 						text-align: center;
@@ -134,9 +137,10 @@
 				&.checked + label {
 					background: #f3f5f7;
 					padding-left: 50%;
-                                          @media (min-width: @screen-sm-min) {
-					padding-left: 92px;
-                                      }
+
+					@media (min-width: @screen-sm-min) {
+						padding-left: 92px;
+					}
 
 					>span:nth-child(1) {
 						color: #5c667a;
@@ -149,11 +153,11 @@
 					&:before {
 						background-color: #fff;
 						content: "";
-                                                width: 100%;
-                                          @media (min-width: @screen-sm-min) {
-						width: 88px;
-                                          }
+						width: 100%;
 
+						@media (min-width: @screen-sm-min) {
+							width: 88px;
+						}
 					}
 				}
 			}
@@ -161,39 +165,42 @@
 
 		.group-by-ctrl {
 			display: flex;
-                        margin-top: 16px;
-                        flex-direction: column;
-                        align-items: start;
+			margin-top: 16px;
+			flex-direction: column;
+			align-items: start;
 
-                        @media (min-width: @screen-sm-min) {
-                          flex-direction: row;
-                          align-items: center;
-                          margin-top: 0;
-                        }
+			@media (min-width: @screen-sm-min) {
+				flex-direction: row;
+				align-items: center;
+				margin-top: 0;
+			}
 
 			>span {
 				margin-right: 16px;
-                                color: #5C667A;
+				color: #5c667a;
 			}
 
-                        .btn-group {
-                          margin-top: 12px;
-                          width: 100%;
-                        @media (min-width: @screen-sm-min) {
-                          margin-top: 0;
-                          width: auto;
-                        }
-                        > button {
-                          width: 100%;
-                          display: flex;
-                          align-items: center;
-                          justify-content: space-between;
-                        @media (min-width: @screen-sm-min) {
-                          width: auto;
-                          display: inline;
-                        }
-                        }
-                        }
+			.btn-group {
+				margin-top: 12px;
+				width: 100%;
+
+				@media (min-width: @screen-sm-min) {
+					margin-top: 0;
+					width: auto;
+				}
+
+				> button {
+					width: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+
+					@media (min-width: @screen-sm-min) {
+						width: auto;
+						display: inline;
+					}
+				}
+			}
 
 			.btn.dropdown-toggle {
 				background: #fff;
@@ -203,7 +210,6 @@
 				height: 40px;
 				padding: 0 14px 0 16px;
 			}
-
 		}
 
 		.total-headline {
@@ -419,12 +425,14 @@
 		.horizontal-divider {
 			height: 1px;
 			background: #dfe3e7;
-                        &:nth-child(4) {
-                          display: none;
-			@media (min-width: @screen-sm-min) {
-                          display: block;
-                        }
-                        }
+
+			&:nth-child(4) {
+				display: none;
+
+				@media (min-width: @screen-sm-min) {
+					display: block;
+				}
+			}
 		}
 
 		.package-config {
@@ -514,9 +522,10 @@
 
 				.btn-group {
 					width: 100%;
-						@media (min-width: @screen-sm-min) {
-							width: auto;
-                                                      }
+
+					@media (min-width: @screen-sm-min) {
+						width: auto;
+					}
 
 					.dropdown-toggle {
 						width: 100%;
@@ -534,12 +543,13 @@
 
 			.chart-tops {
 				display: flex;
-                                margin-top: 24px;
-                                flex-direction: column;
-			@media (min-width: @screen-sm-min) {
-                                margin-top: 0;
-                                flex-direction: row;
-                        }
+				margin-top: 24px;
+				flex-direction: column;
+
+				@media (min-width: @screen-sm-min) {
+					margin-top: 0;
+					flex-direction: row;
+				}
 
 				.c-top-stats-table:nth-child(1) {
 					margin-right: 24px;
